# frostgum

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
migrations/: 001_base.sql
src/: config.rs  logging.rs  main.rs
src/api/: aggregation.rs  filters.rs  mod.rs  routes.rs
src/db/: mod.rs  postgres.rs  schema.rs
src/decoder/: account.rs  instruction.rs  mod.rs
src/idl/: loader.rs  mod.rs  schema_gen.rs
src/indexer/: backfill.rs  batch.rs  mod.rs  realtime.rs
src/rpc/: mod.rs
static/: app.js  index.html  style.css
