[package]
name = "frostgum"
version = "0.1.0"
edition = "2021"
authors = ["frostgum"]
description = "Universal Solana Indexer with Dynamic Schema and API"

[[bin]]
name = "frostgum"
path = "src/main.rs"

[dependencies]
solana-sdk = "2.1"
solana-rpc-client = "2.1"
solana-rpc-client-api = "2.1"
solana-transaction-status = "2.1"
solana-account-decoder = "2.1"

tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
async-trait = "0.1"

axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
    "macros",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.3"

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

thiserror = "1.0"
anyhow = "1.0"

bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
flate2 = "1.0"
sha2 = "0.10"
rand = "0.8"
url = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
